ajustes nomes empresas

--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
 
             <div class="div-logos">
                 <img src="assets/mb-labs.webp" alt="logo mb-labs">
-                <p>UOL</p>
+                <p>Mb Labs</p>
             </div>
 
             <div class="div-logos">
                 <img src="assets/toro.webp" alt="logo toro">
-                <p>Burger King</p>
+                <p>Toro</p>
             </div>
 
             <div class="div-logos">
