alterado link botão

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="div-3-main-1">
             <a
-                href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789/?utm_source=Equip_Varella&utm_medium=Equip_Varella&split=12">
+                href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
                 <button class="button-main-1">
                     <p>
                         QUERO ME INSCREVER
@@ -144,8 +144,8 @@
                 <div class="div-3-main-3">
                     <p class="p-2-main-3">Toque no Botão e Libere Seu Acesso Imediatamente! </p>
                     <a
-                        href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789/?utm_source=Equip_Varella&utm_medium=Equip_Varella&split=12">
-                        <button class="button-main-3">
+                    href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                    <button class="button-main-3">
                             <p>QUERO ME TORNAR UM PROGRAMADOR</p>
                         </button>
                     </a>
@@ -229,7 +229,7 @@
             </div>
 
             <div class="div-logos">
-                <img src="assets/btg.webp" alt=" alt=" logo btg">
+                <img src="assets/btg.webp" alt="logo btg">
                 <p>BTG Pactual</p>
             </div>
 
@@ -924,8 +924,8 @@
                 <div class="div-3-main-3">
                     <p class="p-2-main-3">Toque no Botão e Libere Seu Acesso Imediatamente! </p>
                     <a
-                        href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789/?utm_source=Equip_Varella&utm_medium=Equip_Varella&split=12">
-                        <button class="button-main-3">
+                    href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                    <button class="button-main-3">
                             <p>QUERO ME TORNAR UM PROGRAMADOR</p>
                         </button>
                     </a>
