tirando acesso de 2 anos

--- a/index.html
+++ b/index.html
@@ -1311,13 +1311,13 @@
                     </p>
                 </div>
 
-                <button class="botao-pergunta">Eu tenho acesso vitalicio?
+                <button class="botao-pergunta">Quanto tempo eu tenho de Acesso ?
                     <img src="assets/seta-perguntas.svg" alt="seta" class="imagem-pergunta"
                         style="width: 30px; height: 30px;">
                 </button>
                 <div class="pergunta" style="display: none;">
-                    <p>Não, o acesso ao curso é válido por 2 anos. Após esse prazo, se quiser continuar terá que pagar
-                        um valor simbólico para continuar no treinamento.
+                    <p>O acesso ao DevClub é anual. Entrando para o Club, você terá acesso por um ano, e após poderá
+                        renovar o acesso ano a ano, caso desejar.
                     </p>
                 </div>
             </div>
