--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="responsividade.css" media="screen" />
     <meta name="description"
         content="Rodolfo Mori tem o propósito de ajudar o máximo de pessoas a transformarem suas vidas por meio da programação, assim como ele fez, ganhando altos salários, trabalhando de onde quiser, só utilizando o seu computador.">
-    <title>[DEVCLUB] PAGINA DE ESPERA</title>
+    <title>[DEVCLUB]</title>
 </head>
 
 <body>
