tirado botao acesso vitalicio

--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@
                     </p>
                 </div>
 
-                <button class="botao-pergunta">Eu tenho acesso vitalicio?
+                <!-- <button class="botao-pergunta">Eu tenho acesso vitalicio?
                     <img src="assets/seta-perguntas.svg" alt="seta" class="imagem-pergunta"
                         style="width: 30px; height: 30px;">
                 </button>
@@ -1319,7 +1319,7 @@
                     <p>Não, o acesso ao curso é válido por 2 anos. Após esse prazo, se quiser continuar terá que pagar
                         um valor simbólico para continuar no treinamento.
                     </p>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
