--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="div-parte-2-main-3">
                     <div class="div-3-main-3">
                         <p class="p-2-main-3">Toque no Botão e Libere Seu Acesso Imediatamente! </p>
-                        <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                        <a href="https://rodolfomori.com.br/inscricao">
                             <button class="button-main-3">
                                 <p>QUERO ME TORNAR UM PROGRAMADOR</p>
                             </button>
@@ -946,7 +946,7 @@
                 <div class="div-parte-2-main-3">
                     <div class="div-3-main-3">
                         <p class="p-2-main-3">Toque no Botão e Libere Seu Acesso Imediatamente! </p>
-                        <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                        <a href="https://rodolfomori.com.br/inscricao">
                             <button class="button-main-3">
                                 <p>QUERO ME TORNAR UM PROGRAMADOR</p>
                             </button>
@@ -1172,7 +1172,7 @@
                     <p class="p-2-main-12">Entre agora mesmo para o DevClub</p>
                 </div>
                 <div class="div-3-main-12">
-                    <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                    <a href="https://rodolfomori.com.br/inscricao">
                         <button class="button-main-3">
                             <p>ENTRAR NA LISTA</p>
                         </button>
@@ -1357,7 +1357,7 @@
                 <div class="div-parte-2-main-3">
                     <div class="div-3-main-3">
                         <p class="p-2-main-3">Toque no Botão e Libere Seu Acesso Imediatamente! </p>
-                        <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                        <a href="https://rodolfomori.com.br/inscricao">
                             <button class="button-main-3">
                                 <p>QUERO ME TORNAR UM PROGRAMADOR</p>
                             </button>
