alterado links botões e vídeo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         pago do mercado.</span></p>
                 <section class="section-1">
                     <div class="video">
-                        <iframe src="https://www.youtube.com/embed/1aeCsalWtE8"
+                        <iframe src="https://www.youtube.com/embed/5X51ujsuPRY"
                             title="AULA 04 | SEU PRIMEIRO EMPREGO EM ATÉ 6 MESES" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
@@ -69,7 +69,7 @@
                 </p>
             </div>
             <div class="div-3-main-1">
-                <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                <a href="https://pay.hotmart.com/H79282593C?off=7w92hywj&checkoutMode=10&bid=1679249186182&split=12">
                     <button class="button-main-1">
                         <p>
                             QUERO ME INSCREVER
@@ -194,7 +194,8 @@
                 <div class="div-parte-2-main-3">
                     <div class="div-3-main-3">
                         <p class="p-2-main-3">Toque no Botão e Libere Seu Acesso Imediatamente! </p>
-                        <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                        <a
+                            href="https://pay.hotmart.com/H79282593C?off=7w92hywj&checkoutMode=10&bid=1679249186182&split=12">
                             <button class="button-main-3">
                                 <p>QUERO ME TORNAR UM PROGRAMADOR</p>
                             </button>
@@ -819,7 +820,7 @@
         </div>
     </main>
 
-    <main class="main-7">
+    <!-- <main class="main-7">
         <div class="main-7-largura">
             <div class="div-1-main-7">
                 <p class="p-1-main-7">PROJETOS REAIS PEDIDOS PELO MERCADO
@@ -901,7 +902,7 @@
         </div>
 
         </div>
-    </main>
+    </main> -->
 
     <main class="main-9">
         <div class="main-9-largura">
@@ -946,7 +947,8 @@
                 <div class="div-parte-2-main-3">
                     <div class="div-3-main-3">
                         <p class="p-2-main-3">Toque no Botão e Libere Seu Acesso Imediatamente! </p>
-                        <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                        <a
+                            href="https://pay.hotmart.com/H79282593C?off=7w92hywj&checkoutMode=10&bid=1679249186182&split=12">
                             <button class="button-main-3">
                                 <p>QUERO ME TORNAR UM PROGRAMADOR</p>
                             </button>
@@ -1172,7 +1174,8 @@
                     <p class="p-2-main-12">Entre agora mesmo para o DevClub</p>
                 </div>
                 <div class="div-3-main-12">
-                    <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                    <a
+                        href="https://pay.hotmart.com/H79282593C?off=7w92hywj&checkoutMode=10&bid=1679249186182&split=12">
                         <button class="button-main-3">
                             <p>ENTRAR NA LISTA</p>
                         </button>
@@ -1357,7 +1360,8 @@
                 <div class="div-parte-2-main-3">
                     <div class="div-3-main-3">
                         <p class="p-2-main-3">Toque no Botão e Libere Seu Acesso Imediatamente! </p>
-                        <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                        <a
+                            href="https://pay.hotmart.com/H79282593C?off=7w92hywj&checkoutMode=10&bid=1679249186182&split=12">
                             <button class="button-main-3">
                                 <p>QUERO ME TORNAR UM PROGRAMADOR</p>
                             </button>
