--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </p>
             </div>
             <div class="div-3-main-1">
-                <a href="https://pay.hotmart.com/H79282593C?checkoutMode=10&bid=1675623356789&split=12">
+                <a href="https://rodolfomori.com.br/inscricao">
                     <button class="button-main-1">
                         <p>
                             QUERO ME INSCREVER
