alterado minutagem iframe

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         pago do mercado.</span></p>
                 <section class="section-1">
                     <div class="video">
-                        <iframe src="https://www.youtube.com/embed/5X51ujsuPRY"
+                        <iframe  src="https://www.youtube.com/embed/5X51ujsuPRY?feature=share&t=4792"
                             title="AULA 04 | SEU PRIMEIRO EMPREGO EM ATÉ 6 MESES" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
